--- a/src/app/dialog-terminos/dialog-terminos.component.html
+++ b/src/app/dialog-terminos/dialog-terminos.component.html
@@ -1,154 +1,159 @@
-<div id="header">
-  <div>
-    <h2>Geovisor ANH v3.0</h2>
-    <h4>Términos y Condiciones</h4>
+<div class="terms">
+  <div id="header">
+    <div>
+      <h2>Geovisor ANH v3.0</h2>
+      <h4>Términos y Condiciones</h4>
+    </div>
+    <div style="align-content: flex-end;">
+      <img src="assets/logo-anh.png" width="153px" height="70px" align="right">
+    </div>
   </div>
-  <div style="align-content: flex-end;">
-    <img src="assets/logo-anh.png" width="153px" height="70px" align="right">
-  </div>
-</div>
-<div id="body">
-  <p>
-    La Agencia Nacional de Hidrocarburos (ANH) es la institución responsable de administrar el funcionamiento
-    del GEOVISOR ANH, siendo el GEOVISOR ANH una herramienta que permite visualizar gráfica y dinámicamente capas
-    de información geográfica en formato raster y vector. La ANH se reserva el derecho de cambiar, suspender
-    temporalmente o interrumpir el acceso y uso del GEOVISOR ANH, al igual que el de sus términos y condiciones de
-    uso, con o sin previo aviso en cualquier momento sin asumir ninguna responsabilidad sobre los inconvenientes
-    que esto pueda causar.
-  </p>
-  <b>
-    El usuario que ingrese y utilice la herramienta, reconoce y acepta mediante el presente acuerdo cada una de
-    las políticas y condiciones de uso que se mencionan a continuación, enmarcadas en el ámbito de la ICDE y en
-    cumplimiento de la política nacional de Información Geográfica (lG):
-  </b>
-  <p>
-    La información espacial que contiene el GEOVISOR ANH es de carácter informativo, transitorio, aproximado y
-    sin validez legal por cuanto se encuentra en permanente actualización por parte de las entidades responsables
-    de su generación, por lo tanto pueden existir diferencias en relación al objeto o fenómeno que se esté
-    representando. Ante cualquier imprecisión o duda generada por los datos, el usuario puede verificar su
-    consistencia y vigencia con el organismo productor de la información y solicitar el detalle correspondiente.
-  </p>
-  <p>
-    Puesto que las capas de información contenidas en el GEOVISOR ANH provienen de distintas instituciones y han
-    sido generadas en diferentes sistemas de referencia y escalas, se ha realizado una transformación y proyección
-    a coordenadas planas de Gauss Krüger con origen central, referidas al datum MAGNA-SIRGAS, siendo facultad del
-    usuario verificar su exactitud y vigencia mediante levantamiento de campo y/o consulta con las autoridades
-    competentes.
-  </p>
-  <p>
-    La Agencia Nacional de Hidrocarburos no se hace responsable de los resultados y/o decisiones y/o acciones
-    que puedan derivar del uso de esta información, ya sea producto de la visualización de una capa
-    individualmente o de la integración y/o procesamiento de varias de ellas.
-  </p>
-  <p>
-    Los mapas publicados en el GEOVISOR ANH, que se refieren o se relacionan con los límites y fronteras de
-    Colombia, no comprometen en modo alguno a la ANH y su validez debe ser avalada por las autoridades que
-    ejerzan competencia en esos temas.
-  </p>
-  <p>
-    El usuario del GEOVISOR ANH se compromete a:
-  </p>
-  <ul>
-    <li>
-      <p>
-        Respetar los derechos de autor y brindar el apropiado crédito de titularidad a la ANH
-        (contemplando lo siguiente: titular, año de publicación, versión, tipo de información, escala y/o
-        resolución espacial). Todo ello con sujeción a las normas especiales civiles y penales que regulan
-        el derecho de autor.
-      </p>
-    </li>
-    <li>
-      <p>
-        No copiar, vender, comercializar, distribuir y transferir, en forma alguna, la información presentada en
-        el GEOVISOR ANH, por cualquier medio conocido o por conocer.
-      </p>
-    </li>
-    <li>
-      <p>
-        No eliminar, ocultar o alterar los avisos de propiedad intelectual de la ANH, tanto de derecho de autor
-        como de propiedad industrial, que contenga el GEOVISOR ANH y/o la información contenida en este.
-      </p>
-    </li>
-    <li>
-      <p>
-        No incluir dentro de la información dispuesta por el GEOVISOR ANH, logo símbolos, leyendas ni publicidad
-        alguna sin autorización expresa de la ANH.
-      </p>
-    </li>
-    <li>
-      <p>
-        No realizar modificación alguna a la información contenida en el GEOVISOR ANH, sin autorización expresa
-        y escrita de la ANH.
-      </p>
-    </li>
-    <li>
-      <p>
-        Responder por la incorrecta, indebida e ilegal utilización que se realice, de manera propia o mediante
-        tercera persona bajo su aprobación, de la información dispuesta en el GEOVISOR ANH. En consecuencia, la
-        ANH no será responsable de reclamación, daño general, especial, incidental o consecuente que se derive
-        del uso del mismo, e incluso de la pérdida y/o los perjuicios causados por el usuario, directa o
-        indirectamente, de la utilización de la información del GEOVISOR ANH, aunque la ANH haya sido puesta
-        sobre aviso acerca de tales daños. En general, sobre los eventos expuestos, la ANH no podrá ser
-        demandada judicialmente, sin embargo, si podrá ejercer las acciones legales conducentes en contra del
-        usuario.
-      </p>
-    </li>
-    <li>
-      <p>
-        No ceder los derechos y obligaciones derivados del presente documento a persona natural y/o jurídica,
-        sin previo consentimiento expreso y escrito de la ANH.
-      </p>
-    </li>
-    <li>
-      <p>
-        Si necesita utilizar el GEOVISOR ANH o la información contenida en este, para un fin diferente al
-        relacionado en el presente documento, solicitará permiso previo a la ANH.
-      </p>
-    </li>
-    <li>
-      <p>
-        Todo el riesgo referente al uso del GEOVISOR ANH es responsabilidad del usuario. En todo caso, la ANH no
-        se hace responsable de la calidad de los trabajos, obras o investigaciones realizadas posteriormente,
-        con fundamento en la información y los datos suministrados en el GEOVISOR ANH. Igualmente, la ANH no
-        ofrece garantía alguna sobre calidad, rendimiento o idoneidad para fines concretos de los mismos.
-      </p>
-    </li>
-    <li>
-      <p>
-        En todo evento, el usuario se compromete a advertir cualquier imprecisión de la información del GEOVISOR
-        ANH, para lo cual la ANH podrá verificar, modificar y comunicar cualquier asunto al respecto.
-      </p>
-    </li>
-    <li>
-      <p>
-        Las responsabilidades que mediante este acuerdo contraen la ANH y el usuario, no las hace solidariamente
-        responsables ante terceros. En consecuencia, cada parte será responsable de las obligaciones que
-        resulten como consecuencia del presente acuerdo.
-      </p>
-    </li>
-    <li>
-      <p>
-        La ANH puede rescindir el presente acuerdo, ante el incumplimiento de las obligaciones del mismo, para
-        lo cual notificará al usuario de su decisión. Lo anterior, sin perjuicio de los demás mecanismos legales
-        otorgados para la indemnización de los perjuicios causados en virtud de la infracción de alguno de los
-        términos y condiciones de este acuerdo.
-      </p>
-    </li>
-    <li>
+  <div id="body">
+    <p>
+      La Agencia Nacional de Hidrocarburos (ANH) es la institución responsable de administrar el funcionamiento
+      del GEOVISOR ANH, siendo el GEOVISOR ANH una herramienta que permite visualizar gráfica y dinámicamente capas
+      de información geográfica en formato raster y vector. La ANH se reserva el derecho de cambiar, suspender
+      temporalmente o interrumpir el acceso y uso del GEOVISOR ANH, al igual que el de sus términos y condiciones de
+      uso, con o sin previo aviso en cualquier momento sin asumir ninguna responsabilidad sobre los inconvenientes
+      que esto pueda causar.
+    </p><br>
+    <p>
       <b>
-        La vigencia del presente acuerdo de uso del GEOVISOR ANH, se inicia con la aceptación del presente
-        documento.
+        El usuario que ingrese y utilice la herramienta, reconoce y acepta mediante el presente acuerdo cada una de
+        las políticas y condiciones de uso que se mencionan a continuación, enmarcadas en el ámbito de la ICDE y en
+        cumplimiento de la política nacional de Información Geográfica (IG):
       </b>
-    </li>
-  </ul>
-</div>
-<div class="ui-g ui-fluid">
-  <div class="ui-g-12 ui-md-6">
-    <button pButton type="button" (click)="deagreeTerms()" icon="pi pi-times" label="No Acepto"
-      class="ui-button-warning"></button>
+    </p><br>
+    <p>
+      La información espacial que contiene el GEOVISOR ANH es de carácter informativo, transitorio, aproximado y
+      sin validez legal por cuanto se encuentra en permanente actualización por parte de las entidades responsables
+      de su generación; por lo tanto, pueden existir diferencias en relación al objeto o fenómeno que se esté
+      representando. Ante cualquier imprecisión o duda generada por los datos, el usuario puede verificar su
+      consistencia y vigencia con el organismo productor de la información y solicitar el detalle correspondiente.
+    </p><br>
+    <p>
+      Puesto que las capas de información contenidas en el GEOVISOR ANH provienen de distintas instituciones y han
+      sido generadas en diferentes sistemas de referencia y escalas, se ha realizado una transformación y proyección
+      a coordenadas planas de Gauss Krüger con origen central, referidas al datum MAGNA-SIRGAS, siendo facultad del
+      usuario verificar su exactitud y vigencia mediante levantamiento de campo y/o consulta con las autoridades
+      competentes.
+    </p><br>
+    <p>
+      La Agencia Nacional de Hidrocarburos no se hace responsable de los resultados y/o decisiones y/o acciones
+      que puedan derivar del uso de esta información, ya sea producto de la visualización de una capa
+      individualmente o de la integración y/o procesamiento de varias de ellas.
+    </p><br>
+    <p>
+      La información publicada en el GEOVISOR ANH, que se refiera o se relacione con los límites y fronteras de
+      Colombia, no compromete en modo alguno a la ANH y su validez debe ser avalada por las autoridades que
+      ejerzan competencia en esos temas.
+    </p><br>
+    <p>
+      El usuario del GEOVISOR ANH se compromete a:
+    </p>
+    <ul>
+      <li>
+        <p>
+          Respetar los derechos de autor y brindar el apropiado crédito de titularidad a la ANH
+          (contemplando lo siguiente: titular, año de publicación, versión, tipo de información, escala y/o
+          resolución espacial). Todo ello con sujeción a las normas especiales civiles y penales que regulan
+          el derecho de autor.
+        </p>
+      </li>
+      <li>
+        <p>
+          No copiar, vender, comercializar, distribuir y transferir, en forma alguna, la información presentada en
+          el GEOVISOR ANH, por cualquier medio conocido o por conocer.
+        </p>
+      </li>
+      <li>
+        <p>
+          No eliminar, ocultar o alterar los avisos de propiedad intelectual de la ANH, tanto de derecho de autor
+          como de propiedad industrial, que contenga el GEOVISOR ANH y/o la información contenida en este.
+        </p>
+      </li>
+      <li>
+        <p>
+          No incluir dentro de la información dispuesta por el GEOVISOR ANH, logo símbolos, leyendas ni publicidad
+          alguna sin autorización expresa de la ANH.
+        </p>
+      </li>
+      <li>
+        <p>
+          No realizar modificación alguna a la información contenida en el GEOVISOR ANH, sin autorización expresa
+          y escrita de la ANH.
+        </p>
+      </li>
+      <li>
+        <p>
+          Responder por la incorrecta, indebida e ilegal utilización que se realice, de manera propia o mediante
+          tercera persona bajo su aprobación, de la información dispuesta en el GEOVISOR ANH. En consecuencia, la
+          ANH no será responsable de reclamación, daño general, especial, incidental o consecuente que se derive
+          del uso del mismo, e incluso de la pérdida y/o los perjuicios causados por el usuario, directa o
+          indirectamente, de la utilización de la información del GEOVISOR ANH, aunque la ANH haya sido puesta
+          sobre aviso acerca de tales daños. En general, sobre los eventos expuestos, la ANH no podrá ser
+          demandada judicialmente, sin embargo, si podrá ejercer las acciones legales conducentes en contra del
+          usuario.
+        </p>
+      </li>
+      <li>
+        <p>
+          No ceder los derechos y obligaciones derivados del presente documento a persona natural y/o jurídica,
+          sin previo consentimiento expreso y escrito de la ANH.
+        </p>
+      </li>
+      <li>
+        <p>
+          Si necesita utilizar el GEOVISOR ANH o la información contenida en este, para un fin diferente al
+          relacionado en el presente documento, solicitará permiso previo a la ANH.
+        </p>
+      </li>
+      <li>
+        <p>
+          Todo el riesgo referente al uso del GEOVISOR ANH es responsabilidad del usuario. En todo caso, la ANH no
+          se hace responsable de la calidad de los trabajos, obras o investigaciones realizadas posteriormente,
+          con fundamento en la información y los datos suministrados en el GEOVISOR ANH. Igualmente, la ANH no
+          ofrece garantía alguna sobre calidad, rendimiento o idoneidad para fines concretos de los mismos.
+        </p>
+      </li>
+      <li>
+        <p>
+          En todo evento, el usuario se compromete a advertir cualquier imprecisión de la información del GEOVISOR
+          ANH, para lo cual la ANH podrá verificar, modificar y comunicar cualquier asunto al respecto.
+        </p>
+      </li>
+      <li>
+        <p>
+          Las responsabilidades que mediante este acuerdo contraen la ANH y el usuario, no las hace solidariamente
+          responsables ante terceros. En consecuencia, cada parte será responsable de las obligaciones que
+          resulten como consecuencia del presente acuerdo.
+        </p>
+      </li>
+      <li>
+        <p>
+          La ANH puede rescindir el presente acuerdo, ante el incumplimiento de las obligaciones del mismo, para
+          lo cual notificará al usuario de su decisión. Lo anterior, sin perjuicio de los demás mecanismos legales
+          otorgados para la indemnización de los perjuicios causados en virtud de la infracción de alguno de los
+          términos y condiciones de este acuerdo.
+        </p>
+      </li>
+      <br>
+      <li>
+        <b>
+          La vigencia del presente acuerdo de uso del GEOVISOR ANH, se inicia con la aceptación del presente
+          documento.
+        </b>
+      </li>
+    </ul>
   </div>
-  <div class="ui-g-12 ui-md-6">
-    <button pButton type="button" (click)="agreeTerms()" icon="pi pi-check" label="Acepto"
-      class="ui-button-success"></button>
+  <div class="ui-g ui-fluid">
+    <div class="ui-g-12 ui-md-6">
+      <button pButton type="button" (click)="deagreeTerms()" icon="pi pi-times" label="No Acepto"
+        class="ui-button-warning"></button>
+    </div>
+    <div class="ui-g-12 ui-md-6">
+      <button pButton type="button" (click)="agreeTerms()" icon="pi pi-check" label="Acepto"
+        class="ui-button-success"></button>
+    </div>
   </div>
 </div>
