Ajuste: cambio de texto en ayuda en herramienta Cambiar Simbología

--- a/src/app/dialog-symbology-change/dialog-symbology-change.component.html
+++ b/src/app/dialog-symbology-change/dialog-symbology-change.component.html
@@ -60,5 +60,5 @@
 </div>
 <br>
 <p-message id="infoMedicion" severity="info" *ngIf="infoTool"
-  text="El color seleccionado se aplica a las capas cargadas. Si la capa seleccionada es de polígonos el color se aplica al relleno de capa.">
+  text="El color seleccionado se aplica a las capas cargadas por el usuario. Si la capa seleccionada es tipo punto o polígono el color se aplica al relleno de capa.">
 </p-message>
