Ajuste: se agrega nombre a herramienta Histórico de Tierras

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -466,7 +466,7 @@
 <div id="time-slider" class="esri-widget esri-component" *ngIf="!errorArcgisService" align="center">
   <div class="ts-bg">
     <div id="ts-tierras" class="ui-slider-orange">
-      <div class="ts-label">{{nameLayer}}</div>
+      <div class="ts-label">Histórico de Tierras <br> {{nameLayer}}</div>
     </div>
   </div>
 </div>
