Ajuste: se agrega viñeta de despliegue para coordenadas on live

--- a/src/app/map-viewer/map-viewer.component.css
+++ b/src/app/map-viewer/map-viewer.component.css
@@ -666,14 +666,14 @@ p-sidebar {
 ::ng-deep #coordsWidget .esri-select {
   border: none !important;
   height: auto;
-  background: none;
+  width: 260px;
   font-size: 11.5px;
   padding: unset;
 }
 
 ::ng-deep #coordsWidget {
-  width: 250px !important;
-  max-width: 250px !important;
+  width: 270px !important;
+  max-width: 270px !important;
   font-size: 12px;
 }
 
